Fixed Validation for references page. Each field is checked to ensure it's filled. Specialized fields such as the Phone Number Field and the email field are checked to ensure they have valid formats. If everything passes, then you can move to the next page.